src/test/fail/bad_start_token.ly
#[
SyntaxError: Unexpected token +.
Where: File "test/fail/bad_start_token.ly" at line 6
]#

+
